# neovesity-personal-assistant-python-capstone

./: .gitignore  INSTALLATION.md  QUICKSTART.md  README.md  main.py  note_form.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: unit-tests.yml
demo_data/contacts/: 8164e95a-107e-476e-a702-75798e5da478.json
demo_data/notes/: 6d721b06-08cc-4cd3-b335-6d336478ef4e.json
markdown/: help_markdown.py
personal_assistant/: __init__.py  config.py  main.py
personal_assistant/cli/: args_parsers.py  contacts_bot.py
personal_assistant/models/: __init__.py  address_book.py  exceptions.py  field.py  note.py  notes_book.py  phone.py  record.py
personal_assistant/presenters/: __init__.py  add_birthday_presenter.py  add_contact_presenter.py  add_note_presenter.py  change_contact_presenter.py  change_note_presenter.py  delete_contact_presenter.py  delete_note_presenter.py  generate_data_presenter.py  hello_presenter.py  presenter.py  presenters_registry.py  search_contacts_by_email_presenter.py  search_contacts_by_phone_presenter.py  search_contacts_presenter.py  search_notes_by_tag_presenter.py  search_notes_presenter.py  show_all_notes_presenter.py  show_all_presenter.py  show_birthday_presenter.py  show_help_presenter.py  show_phone_presenter.py  show_upcoming_birthdays_presenter.py
personal_assistant/storage/: __init__.py  address_book.py  base_storage.py  constants.py  heap_storage.py  index_manager.py  notes_storage.py
personal_assistant/tui/: __init__.py  app.py
personal_assistant/use_cases/: commands.py
tests/: test_contacts_bot.py
(+15 files in other folders)
